--- a/index.html
+++ b/index.html
@@ -15,17 +15,15 @@
 <body>
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
-
- 
- <div class="conteudo">
-    <div class="botoes">
-        <button class="botao ativo">Cursos na Alura</button>
+       <div class="conteudo">
+       <div class="botoes">
+        <button class="botao"> Curso Alura</button>
         <button class="botao">Criar projetos em JavaScript</button>
         <button class="botao">Criar um portfolio</button>
         <button class="botao">Atualizar meu currículo</button>
     </div>
     <div class="abas-textos">
-        <div class="aba-conteudo">
+        <div class="aba-conteudo ativo">
             <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
             <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
         </div>
@@ -43,8 +41,6 @@
         </div>
     </div>
 </div>
-
-
 </section>
 <script src="main.js"></script>
 </body>
